--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "conventional-changelog-eslint": "^3.0.9",
     "css-loader": "^3.1.0",
     "eos-icons": "^5.1.0",
     "eos-icons-react": "2.0.1",
@@ -53,6 +54,7 @@
     "react": "^16.8.6",
     "react-color": "^2.19.3",
     "react-dom": "^16.8.6",
+    "semantic-release": "^19.0.3",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.4",
     "url-loader": "^2.1.0",
@@ -64,7 +66,13 @@
       [
         "@semantic-release/commit-analyzer",
         {
-          "preset": "eslint"
+          "preset": "eslint",
+          "releaseRules": [
+            {
+              "tag": "New",
+              "release": "minor"
+            }
+          ]
         }
       ],
       "@semantic-release/release-notes-generator",
